[project]
name = "async-patterns-py"
version = "0.1.0"
description = "Concurrency patterns in Python — asyncio, threads, processes, with real benchmarks"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
